@@ -46,7 +46,7 @@ CCFLAGS_TEST    = $(CCFLAGS) -DTEST -g -DDEBUG
 CCFLAGS_PRF    = $(CCFLAGS) -O3 -pg
 LDFLAGS_PRF    = -pg
 BOOST_TEST_SRC =  $(BD)/test_tools.cpp $(BD)/unit_test_parameters.cpp $(BD)/execution_monitor.cpp  $(BD)/unit_test_log.cpp $(BD)/unit_test_result.cpp $(BD)/supplied_log_formatters.cpp $(BD)/unit_test_main.cpp $(BD)/unit_test_suite.cpp $(BD)/unit_test_monitor.cpp
-SRC_FILES_NO_MAIN = $(SRC)/Arc.cc $(SRC)/strhash.cc $(SRC)/weight.cc $(SRC)/wfstio.cc $(SRC)/2heap.cc $(SRC)/2hash.cc $(SRC)/compose.cc $(SRC)/fst.cc $(SRC)/graph.cc $(SRC)/kbest.cc $(SRC)/train.cc 
+SRC_FILES_NO_MAIN = $(SRC)/Arc.cc $(SRC)/strhash.cc $(SRC)/stringkey.cc $(SRC)/weight.cc $(SRC)/wfstio.cc $(SRC)/2heap.cc $(SRC)/2hash.cc $(SRC)/compose.cc $(SRC)/fst.cc $(SRC)/graph.cc $(SRC)/kbest.cc $(SRC)/train.cc 
 SRC_FILES_NO_MAIN = $(SRC)/Arc.cc $(SRC)/strhash.cc $(SRC)/weight.cc $(SRC)/wfstio.cc $(SRC)/2heap.cc $(SRC)/2hash.cc $(SRC)/compose.cc $(SRC)/fst.cc $(SRC)/graph.cc $(SRC)/kbest.cc $(SRC)/train.cc 
 SRC_FILES = $(SRC_FILES_NO_MAIN) $(SRC)/finite.cc
 SRC_MAIN = $(SRC)/finite.cc
